# DomainGenralizationImplementation

./: .gitignore  README.md  implementation.md  pyproject.toml  theory.md
configs/: rotated_mnist_dger_original.yaml  rotated_mnist_target.yaml
src/: ablation_sweep.py  evaluate.py  run_experiment.py  sweep.py  visualize_embeddings.py
src/dg/: __init__.py  config.py
src/dg/data/: __init__.py  rotated_mnist.py  samplers.py  splits.py
src/dg/methods/: __init__.py  base.py  deepall.py  dger.py  dgnt.py  dnt.py
src/dg/models/: __init__.py  dger_modules.py  interpolator.py  mnist_cnn.py
src/dg/training/: __init__.py  checkpointing.py  engine.py  losses.py  metrics.py  reproducibility.py
tests/: __init__.py  helpers.py  test_ablation_sweep.py  test_config.py  test_dataset.py  test_dger.py  test_evaluate.py  test_interpolation.py  test_mnist_cnn.py  test_reproducibility.py  test_samplers.py  test_splits.py  test_training_smoke.py
