[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rotated-mnist-domain-generalization"
version = "0.1.0"
description = "Reproducible GPU-ready RotatedMNIST domain-generalization experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
visualization = ["matplotlib>=3.7", "scikit-learn>=1.3", "umap-learn>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
